tests/NormalTests/paczka2/big_fuzzy/53022225.err
Error in line 3: L2Q A893 80,0
Error in line 14: 19V A599 59,0
Error in line 12: 45T S701 93,5
Error in line 17: 19V A893 100,11
Error in line 22: d02xcpF S701 1,6
Error in line 15: 19V A893 80,1
Error in line 29: d02xcpF A5rr 18,4
Error in line 25: A893 A893 58,9
Error in line 31: d02xcpF A599 70,7
Error in line 35: 19V S701 45,0
Error in line 33: d02xcpF S701 41,9
Error in line 30: YycWNaQd S701 35,1
Error in line 59: 19V S701 65,3
Error in line 64: L2Q A948 34,1
Error in line 79: YycWNaQd A599 91,8
Error in line 80: YycWNaQd A893 80,5
Error in line 77: 45T A948 52,7
Error in line 89: d02xcpF S701 25,6
Error in line 76: 19V A599 60,6
Error in line 91: 19V A893 70,4
Error in line 94: 19V A599 65,1
Error in line 100: 45T A893 30,8
Error in line 106: d02xcpF A599 99,5
Error in line 126: 19V S701 8,2
Error in line 101: L2Q S701 8,2
Error in line 148: 19V A893 42,7
Error in line 150: zlS A599 51,4
Error in line 155: d02xcpF S701 91,0
Error in line 156: L2Q A599 50,2
Error in line 163: L2Q S701 84,1
Error in line 175: L2Q S701 60,6
Error in line 167: A893 S701 35,5
Error in line 185: 45T S701 45,5
Error in line 190: L2Q A893 4,1
Error in line 189: 45T A599 78,5
Error in line 198: d02xcpF S701 -2,2
Error in line 193: d02xcpF S701 60,7
Error in line 205: d02xcpF A599 33,4
Error in line 192: L2Q A948 86,3
Error in line 218: zlS A893 26,28
Error in line 225: YycWNaQd A948 33,23
Error in line 224: YycWNaQd A599 31,6
Error in line 215: 19V S701 56,2
Error in line 213: 45T S701 156,5
Error in line 234: 19V A599 97,2
